--- a/.github/workflows/maven-build-all-installer.yml
+++ b/.github/workflows/maven-build-all-installer.yml
@@ -109,7 +109,4 @@ jobs:
           title: ${{ matrix.os }} Development Build
           files: | 
             ${{ env.DMG_PATH }}
-            ./target/*.msi
-            ./target/*.exe
-            ./target/*.dmg
-            ./target/*.deb
+            ./target/*.*
